<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="197dp"
        android:layout_height="123dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/login_str"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/register_str"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/update_info_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_btn"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/update_info_str"
        android:textSize="16sp"/>
    <Button
        android:id="@+id/delete_user_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_info_btn"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/delete_user_str"
        android:textSize="16sp"/>


</androidx.constraintlayout.widget.ConstraintLayout>