<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Activity">

    <ImageView
        android:id="@+id/backArrowButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrowbackbutton" />

    <ImageView
        android:id="@+id/imageViewregister"
        android:layout_width="270dp"
        android:layout_height="164dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/register"/>

    <EditText
        android:id="@+id/userName_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewregister"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:inputType="text"
        android:hint="@string/username_et"/>

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName_editText"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:inputType="textPassword"
        android:hint="@string/password_et"/>

    <EditText
        android:id="@+id/confirm_password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_editText"
        android:layout_marginTop="8dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password_et"/>

    <Button
        android:id="@+id/register_main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_editText"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:text="@string/register_str"/>

</androidx.constraintlayout.widget.ConstraintLayout>